@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

class Organization {
}

class HumanResourceManager {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Collaborator {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Job {
    name
}

Organization "1" - "1..*" HumanResourceManager: has >
HumanResourceManager "1" -- "1..*" Collaborator : regist >
Collaborator "1" -- "1..*" Job : assigned to <
@enduml